whyred: Set config_sustainedPerformanceModeSupported
This config will support the Sustained Performance Mode.

Change-Id: Ic992ea6fd910cf679a940b273c95968f4c60adbb

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -567,4 +567,6 @@
          to have a confirmed way to dismiss the keyboard when desired. -->
     <bool name="config_automotiveHideNavBarForKeyboard">true</bool>
 
+    <!-- If this is true, device supports Sustained Performance Mode. -->
+    <bool name="config_sustainedPerformanceModeSupported">true</bool>
 </resources>
