whyred: we only have a white LED
Don't show settings for changing the colour

Signed-off-by: Akhil Narang <akhilnarang.1999@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -585,4 +585,7 @@
 
     <!-- Should we filter any display modes which are unampped? -->
     <bool name="config_filterDisplayModes">true</bool>
+
+    <!-- Whether device has multi color battery LED -->
+    <bool name="config_multiColorBatteryLed">false</bool>
 </resources>
